<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Detector de gestos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="registrar_movimiento">Memorizar movimiento</string>
    <string name="iniciar_detector">Iniciar detector</string>
    <string name="detener_detector">Detener detector</string>
    <string name="coord_x_">"Coord X: "</string>
    <string name="coord_y_">"Coord Y: "</string>
    <string name="coord_z_">"Coord Z: "</string>
    <string name="diff_x_">"Diff X: "</string>
    <string name="diff_y_">"Diff Y: "</string>
    <string name="diff_z_">"Diff Z: "</string>
    <string name="suma_diff_">"Suma total: "</string>
    <string name="mostrar_datos_por_consola">Mostrar datos por consola</string>
    <string name="cambiar_modo">Cambiar modo reconocimiento</string>
    <string name="modo_diff_cuad">Modo dif. de cuadrados</string>
    <string name="modo_med_desv_g">Modo media/desv. global</string>
    <string name="modo_med_desv_c">Modo media/desv. coords</string>
    <string name="debug">Debug</string>

</resources>
