<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetectorDeGestos" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.15"
            android:columnCount="3"
            android:orientation="horizontal" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="fill_vertical"
                android:layout_row="2" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="fill_vertical"
                android:layout_row="2"
                android:onClick="startMemorizarMovimiento"
                android:text="@string/start" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|fill_vertical"
                android:layout_row="2"
                android:onClick="stopMemorizarMovimiento"
                android:text="@string/stop" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/registrar_movimiento"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>

        <ToggleButton
            android:id="@+id/detectorButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="reconocerMovimiento"
            android:textOff="@string/iniciar_detector"
            android:textOn="@string/detener_detector" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:text="@string/debug"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/xCoordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coord_x_" />

                <TextView
                    android:id="@+id/yCoordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coord_y_" />

                <TextView
                    android:id="@+id/zCoordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coord_z_" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=" "
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/xDiffText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diff_x_" />

                <TextView
                    android:id="@+id/yDiffText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diff_y_" />

                <TextView
                    android:id="@+id/zDiffText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diff_z_" />

                <TextView
                    android:id="@+id/sumDiffText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/suma_diff_" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/consoleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="debugConsola"
                    android:text="@string/mostrar_datos_por_consola" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>